--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,7 +54,7 @@ book:
         - star_app_data.qmd 
     - part: "Video Tutorial Scripts"
       chapters:
-        - video_script_welcome_to_star.qmd
+        - video_tutorial_welcome_to_star.qmd
         - video_tutorial_daily_update.qmd
         - video_tutorial_monthly.qmd
         - video_tutorial_guidelines.qmd
@@ -73,6 +73,7 @@ book:
         - first_payment_letter.qmd
         - focus_blue_mailer_setup.qmd
         - payment_message_procedure.qmd
+        - payment_w9_entry.qmd
     - part: "Other Task SOPs"
       chapters:
         - monthly_update_upload.qmd
