--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,6 +52,7 @@ book:
         - star_app_content_updates.qmd  
         - star_app_accessibility.qmd 
         - star_app_data.qmd 
+        - star_testing.qmd
     - part: "Video Tutorial Scripts"
       chapters:
         - video_tutorial_welcome_to_star.qmd
@@ -74,6 +75,7 @@ book:
         - focus_blue_mailer_setup.qmd
         - payment_message_procedure.qmd
         - payment_w9_entry.qmd
+        - faq_payment.qmd
     - part: "Other Task SOPs"
       chapters:
         - monthly_update_upload.qmd
@@ -94,7 +96,13 @@ book:
     - part: "RA Information"
       chapters:
         - ra_tasks.qmd
+        - faq_tasks.qmd
+        - r_tips.qmd
         - remote_desktop_connection.qmd
+        - github.qmd
+        - map_p_drive.qmd
+        - check_data_by_subid.qmd
+        - check_on_study.qmd
    
 
 
