--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,6 +47,7 @@ book:
         - google_voice.qmd
     - part: "STAR App"
       chapters:
+        - chess_documentation.qmd
         - star_app.qmd    
         - star_app_content.qmd  
         - star_app_content_updates.qmd  
@@ -103,6 +104,7 @@ book:
         - check_data_by_subid.qmd
         - check_on_study.qmd
         - dynamic_survey_uploads.qmd
+        - payment_spreadsheet.qmd
    
 format:
   html:
